# vibecode

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release-plz.yml
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: ai_responder.rs  attribute.rs  function.rs  lib.rs  openai.rs  vibecode.rs
src/: lib.rs
tests/: test.rs  test_attribute.rs  test_function.rs
tests/ui/: empty_function_body.rs  empty_function_body.stderr  non_function.stderr
tests/ui/attribute/: empty_function_body.stderr  non_function.rs  non_function.stderr
tests/ui/function/: no_args.rs  no_args.stderr
vibecode_macros/: Cargo.toml
vibecode_macros/src/: ai_responder.rs  attribute.rs  function.rs  lib.rs  openai.rs
