[workspace]
members = ["macros"]

[workspace.package]
version = "0.1.2"
edition = "2024"
description = "Compile-time vibe coding."
repository = "https://github.com/Michael-JB/vibecode"
license = "MIT"
authors = ["Michael <michael@ramyun.co.uk>"]
keywords = ["vibecode", "macro", "openai"]
categories = ["development-tools"]
exclude = [
  ".github/**",
]

[package]
name = "vibecode"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vibecode-macros = { path = "macros", version = "0.1.2" }

[dev-dependencies]
trybuild = "1.0.114"
