[package]
name = "vibecode_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.43"
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.113", features = ["full"] }
thiserror = "2.0.17"
ureq = { version = "3.1.4", features = ["json"] }
